[package]
name = "embedded-imu"
version = "0.1.0"
edition = "2021"
description = "Toolkit for working with embedded IMUs (inertial measurement units)"
license = "Apache-2.0"
repository = "https://github.com/sulami/embedded-imu"

[dependencies]
libc-print = "0.1.21"
nalgebra = { version = "0.32", default_features = false, features = [ "alloc", "libm" ] }
num-traits = { version = "0.2", default_features = false }
