[package]
name = "embedded-imu"
version = "0.1.0"
edition = "2021"
description = "Toolkit for working with embedded IMUs (inertial measurement units)"
license = "Apache-2.0"
repository = "https://github.com/sulami/embedded-imu"

[dependencies]
defmt = "0.3.4"
heapless = "0.7"
libc-print = { version = "0.1.21", optional = true }
nalgebra = { version = "0.32", default_features = false, features = [ "alloc", "libm" ] }
num-traits = { version = "0.2", default_features = false }
postcard = "1.0"
serde = { version = "1.0", default_features = false }

[features]
print = ["dep:libc-print"]
