[package]
name = "postcard-telemetry"
version = "0.1.0"
edition = "2021"
description = "Postcard-based telemetry for embedded devices"
license = "Apache-2.0"
repository = "https://github.com/sulami/postcard-telemetry"

[dependencies]
heapless = "0.7"
num-traits = { version = "0.2", default_features = false }
postcard = "1.0"
serde = { version = "1.0", default_features = false }

[features]
std = ["serde/std"]